[PMSH] Update Filter API
Issue-ID: DCAEGEN2-2922
